# safemerge

./: .gitignore  About.hs  Converter.hs  Encoding.hs  Flow.hs  Language.hs  Main.hs  Makefile  Merger.hs  Printer.hs  Product.hs  README.md  Types.hs  conflicts.sh  run.sh  tags  wiz.cabal
Examples/: SimpleEncoding.hs
benchmarks/: old_list_benchmarks.txt
benchmarks/buggy/B2/: orig.txt  run.sh
benchmarks/buggy/B3/: README
benchmarks/buggy/B4/: README  a.txt  b.txt  merge.txt  orig.txt  run.sh
benchmarks/buggy/B5/: b.txt  merge.txt  run.sh
benchmarks/buggy/B6/: b.txt  run.sh
benchmarks/buggy/B7/: README  b.txt  merge.txt
benchmarks/buggy/B8/: a.txt  b.txt  merge.txt  orig.txt
benchmarks/correct/B1/: .merge.txt.swp  README  a.txt  merge.txt
benchmarks/correct/B2/: README  a.txt
benchmarks/correct/B5/: README  a.txt  b.txt  merge.txt  orig.txt  prog.txt  run.sh
benchmarks/correct/B6/: README  a.txt  b.txt  merge.txt  orig.txt  run.sh
benchmarks/correct/delta/: b.txt
benchmarks/correct/olaf-1/: A.java  B.java  Base.java
benchmarks/correct/olaf-2/: A.java  B.java  Base.java
benchmarks/correct/sm-about/: About_b.txt  run.sh
benchmarks/experiments/loops/: bench.sh
benchmarks/experiments/pldi/: README.md
benchmarks/github/: README.md
benchmarks/github/agilefant/: 48034b3d34_StoryBusinessImpl_create_a_StoryBusinessImpl.java  48034b3d34_StoryBusinessImpl_create_b_StoryBusinessImpl.java  48034b3d34_StoryBusinessImpl_create_m_StoryBusinessImpl.java  7e7c84d881_ProductBusinessImpl_retrieveLeafStoriesOnly_a_ProductBusinessImpl.java  7e7c84d881_ProductBusinessImpl_retrieveLeafStoriesOnly_b_ProductBusinessImpl.java  7e7c84d881_ProductBusinessImpl_retrieveLeafStoriesOnly_m_ProductBusinessImpl.java  7e7c84d881_ProductBusinessImpl_retrieveLeafStoriesOnly_o_ProductBusinessImpl.java  7e7c84d881_ProductBusinessTest_testRetrieveLeafStoriesOnly_a_ProductBusinessTest.java  7e7c84d881_ProductBusinessTest_testRetrieveLeafStoriesOnly_b_ProductBusinessTest.java  7e7c84d881_ProductBusinessTest_testRetrieveLeafStoriesOnly_m_ProductBusinessTest.java  7e7c84d881_ProductBusinessTest_testRetrieveLeafStoriesOnly_o_ProductBusinessTest.java  86c80a1187_StoryHierarchyBusinessImpl_moveToTop_a_StoryHierarchyBusinessImpl.java  86c80a1187_StoryHierarchyBusinessImpl_moveToTop_b_StoryHierarchyBusinessImpl.java  86c80a1187_StoryHierarchyBusinessImpl_moveToTop_m_StoryHierarchyBusinessImpl.java  86c80a1187_StoryHierarchyBusinessImpl_moveToTop_o_StoryHierarchyBusinessImpl.java  9011bf5321_StoryBusinessImpl_copyStorySibling_a_StoryBusinessImpl.java  9011bf5321_StoryBusinessImpl_copyStorySibling_b_StoryBusinessImpl.java  README  b61cc4d03d_StoryBusinessImpl_create_a_StoryBusinessImpl.java  (+59 more)
benchmarks/pldi_experiments/: get-repos.sh  repos.txt  repos_25_most_starred.txt  repos_50_most_starred.txt  repos_50_most_starred_sorted.txt  repos_complete.txt  run-git-stats.pl
dependencies/z3-4.0.0/: z3.cabal
examples/: Ex1.hs  RearViewMirror.hs  SimpleEncoding.hs  ex1-1.c  ex1-2.c  ex1.c  ex4-1.c  ex4-2.c  ex4-3.c
examples/buggy/: buggy5.hs
examples/olaf/: a.txt  incorrect_m.txt  m.txt  prog.smt2  prog.txt  prog_a.txt  prog_b.txt  prog_merge.txt  prog_orig.txt  run.sh
examples/simple/: test-a.txt  test-b.txt  test-m.txt  test-prog.txt
examples/suremerge/: About.hs  ErrorMsg.hs  GetCLIArgs.hs  Misc.hs
examples/txt/: A  B
old/: Main.hs  Parser.hs  Printer.hs  T.hs  Types.hs
src/: Calculus.hs  Edit.hs  Encoding.hs  Flow.hs  Graph.hs  Main.hs  Parser.hs  Printer.hs  Product.hs  Types.hs  Util.hs  tags
src/Analysis/: API.hs  Debug.hs  Dependence.hs  Engine.hs  Optimiser.hs  Pretty.hs  Types.hs  Util.hs  Verifier.hs
src/Edit/: Apply.hs  Diff.hs  Gen.hs  Normalize.hs  Opt.hs  Print.hs  Types.hs
src/Examples/: SimpleEncoding.hs
tests/: Ex2.hs  Olaf.hs
tests/diff/: A.java  B.java  M.java  O.java
tests/java/: A.java  B.java  M.java  O.java
tests/olaf/: README.txt  incorrect_merge.txt  prog_merge.txt  prog_orig.txt  run.sh
tests/regression/: Foo.java  README.md  Syntax.java
tests/suremerge/: GetCLIArgs.hs  Misc.hs  RearViewMirror.hs
tools/git-merge-analyser/: Liff.hs  Main.hs  Makefile  Types.hs  Util.hs  git-merge-analyser.cabal  liff.cabal
tools/git-merge-analyser/src/: Main.hs
tools/git-merge-analyser/src/Analysis/: Liff.hs
tools/git-merge-analyser/src/Analysis/Liff/: Types.hs  Util.hs
tools/git-merge-analyser/src/GitMerge/Analysis/: ChangeSet.hs  GitUtil.hs  Types.hs
(+3406 files in other folders)
