Name:               wiz 
Version:            0.1
Cabal-Version:      >= 1.2
Author:             Marcelo Sousa
Synopsis:           wiz 
Description:        Semantic merge. 
Build-Type:         Simple

Executable wiz 
    Main-Is:          Main.hs
    Build-Depends:    base          
                    , containers    
                    , filepath   
                    , directory
                    , mtl           
                    , cmdargs
                    , smtlib 
                    , uu-parsinglib 
                    , language-java 
                    , transformers 
                    , ansi-terminal 
                    , z3 == 4.1.0
    Hs-Source-Dirs:   src/
    ghc-options:      -O3 -rtsopts
    Extensions:       DoAndIfThenElse

Library
  Build-Depends: base, language-java, containers, mtl, array, filepath 
  Extensions:	GeneralizedNewtypeDeriving, MultiParamTypeClasses, FunctionalDependencies, TypeSynonymInstances, FlexibleInstances
  Hs-Source-Dirs: src/
  Exposed-modules:
      Analysis.Java.Liff
      Analysis.Java.AST
      Analysis.Java.ClassInfo
      Edit 
      Edit.Gen 
      Edit.Types
      Edit.Normalize
      Edit.Apply
      Edit.Diff
      Edit.Print
      Edit.Opt
