Name:		liff	
Version:	0.1
Cabal-Version:  >= 1.2
Author:		Marcelo Sousa
Category: Analysis	
Synopsis: Lightweight AST Difference Analysis for Java
Build-Type: Simple

Library
  Build-Depends: base, language-java, containers, mtl, array, filepath, process
  Extensions:	GeneralizedNewtypeDeriving, MultiParamTypeClasses, FunctionalDependencies, TypeSynonymInstances, FlexibleInstances
  Hs-Source-Dirs: src/
  Exposed-modules:
      Analysis.Liff
      Analysis.Liff.Types
      Analysis.Liff.Util
